fix(vue): fix Stepper line alignment and Breadcrumb li margin
Stepper: line now uses left:-50% right:50% to connect dot centers.
Added margin-top:0!important and padding-left:0!important to override
global li+li and ol padding-left rules.
Breadcrumb: same li margin override for consistent alignment.

--- a/packages/design-system/src/components/_stepper.scss
+++ b/packages/design-system/src/components/_stepper.scss
@@ -5,7 +5,8 @@
   display: flex;
   align-items: flex-start;
   list-style: none !important;
-  padding: 0;
+  padding: 0 !important;
+  padding-left: 0 !important;
   margin: 0;
   counter-reset: step;
 
@@ -18,6 +19,7 @@
     text-align: center;
     list-style: none;
     padding: 0;
+    margin-top: 0 !important;
 
     &::before,
     &::marker {
@@ -30,8 +32,8 @@
     content: '';
     position: absolute;
     top: calc(0.75rem - 1px);
-    left: calc(-50% + 0.75rem);
-    right: calc(50% + 0.75rem);
+    left: -50%;
+    right: 50%;
     height: 2px;
     background: var(--color-border-medium);
     z-index: 0;
